test/1.2/errors/T_EEARG.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

/// ERROR EEARG
typedef void (*eintfun)(int8_be_t);

/// ERROR EEARG
method m(int8_be_t a) {}

/// ERROR EEARG
extern void f(int8_be_t);

/// ERROR EEARG
method n -> (int8_be_t a) {}

/// ERROR EEARG
typedef int8_be_t (*eintfun2)();
